fix: og link fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,7 +74,7 @@ const external: Links[] = [
       property="og:description"
       content="Archive links of all the past DeltaHacks landing website designs."
     />
-    <meta property="og:image" content={siteURL + "og.png"} />
+    <meta property="og:image" content={siteURL + "/og.png"} />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -85,7 +85,7 @@ const external: Links[] = [
       name="twitter:description"
       content="Archive links of all the past DeltaHacks landing website designs."
     />
-    <meta name="twitter:image" content={siteURL + "og.png"} />
+    <meta name="twitter:image" content={siteURL + "/og.png"} />
 
     <!-- meta color theme -->
     <meta name="theme-color" content="#FF375E" />
