Add word break opportunity between Delta and Hacks

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,7 +97,7 @@ const external: Links[] = [
     class="w-full px-4 py-6 mx-auto overflow-x-hidden font-sans text-white bg-primary"
   >
     <h1 class="text-6xl md:text-[4em] flex gap-4 items-center">
-      <span><strong>Delta</strong>Hacks</span>
+      <span><strong>Delta</strong><wbr>Hacks</span>
       <span class="hidden md:block">
         <svg
           height="1em"
