--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,12 @@ interface Links {
 }
 const external: Links[] = [
   {
-    year: 2024,
+    year: 2025,
     url: "https://deltahacks.com",
+  },
+  {
+    year: 2024,
+    url: "https://2024.deltahacks.com",
   },
   {
     year: 2023,
@@ -97,7 +101,7 @@ const external: Links[] = [
     class="w-full px-4 py-6 mx-auto overflow-x-hidden font-sans text-white bg-primary"
   >
     <h1 class="text-6xl md:text-[4em] flex gap-4 items-center">
-      <span><strong>Delta</strong><wbr>Hacks</span>
+      <span><strong>Delta</strong><wbr />Hacks</span>
       <span class="hidden md:block">
         <svg
           height="1em"
